<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizactivity"
    android:orientation="vertical"
    android:background="#2A808080">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="3"
     android:orientation="vertical"
     >

     <TextView
         android:id="@+id/tvprevious"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
         android:text="@string/previous"
         android:textColor="@android:color/black"
         android:textSize="15sp"
         tools:ignore="TouchTargetSizeCheck"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="3dp"/>

     <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="45dp"
    app:cardCornerRadius="30dp"
    android:elevation="50dp"
    android:outlineSpotShadowColor="@color/black"
    android:layout_gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cvquestion"
        android:layout_gravity="center"
/>


</androidx.cardview.widget.CardView>


 </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"

            >

            <RadioButton
                android:id="@+id/radio_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_1"
                android:background="@drawable/options"
                android:layout_marginBottom="7dp"
                android:gravity="center_vertical|center"
                android:textSize="18dp"
                android:drawableEnd="@drawable/both"

                />




            <RadioButton
                android:id="@+id/radio_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_2"
                android:background="@drawable/options"
                android:layout_marginBottom="7dp"
                android:gravity="center_vertical|center"
                android:textSize="18dp"
                android:drawableEnd="@drawable/both"
            />

            <RadioButton
                android:id="@+id/radio_option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_3"
                android:background="@drawable/options"
                android:layout_marginBottom="7dp"
                android:gravity="center_vertical|center"
                android:textSize="18dp"
                android:drawableEnd="@drawable/both"
                />

            <RadioButton
                android:id="@+id/radio_option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/options"
                android:drawableEnd="@drawable/both"
                android:gravity="center_vertical|center"
                android:minHeight="48dp"
                android:text="@string/option_4"
                android:textSize="18dp"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:text="Next"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:id="@+id/btnnext"
    />
    </LinearLayout>
</LinearLayout>

