<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
android:gravity="center"
        >
<androidx.cardview.widget.CardView
    android:layout_width="150dp"
    android:layout_height="150dp"
    app:cardCornerRadius="75dp"
    android:elevation="4dp"
    android:id="@+id/cvcard1"

    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:id="@+id/ivlogo1"/>


</androidx.cardview.widget.CardView>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"

        android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_your_name"
    android:textColor="@color/white"
    android:textSize="22sp"
    android:layout_marginStart="20dp"
    android:id="@+id/tvname"
    />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:hint="@string/enter_your_name"
    android:id="@+id/etName"
    android:inputType="text"
    android:shadowColor="@color/white"
    android:background="@drawable/background_radius"
    android:padding="13dp"
    android:layout_margin="20dp"
    android:autofillHints="name"
    android:textColorHint="@color/white">

</EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:id="@+id/btsubmit"

         >


        </Button>



    </LinearLayout>





</LinearLayout>